# wai-servlet

./: .gitignore  LICENSE  Main.hs  README.md  etlas.dhall  wai-servlet.cabal
.circleci/: config.yml
app/: Main.hs
examples/: Main.hs
java/: Utils.java  Utils2.java  WAIServlet.java
src/: Lib.hs
src/Javax/: Servlet.hs
src/Network/Wai/: Servlet.hs
src/Network/Wai/Servlet/: Examples.hs  File.hs  Request.hs  Response.hs  Settings.hs
test/: FileSpec.hs  Spec.hs
