name:                wai-servlet
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Javier Neira Sanchez
maintainer:          Javier Neira Sanchez <atreyu.bbb@gmail.com>
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Wai.Servlet     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7 && < 4.9
                     , wai == 3.2.1.1
                     , network
                     , http-types == 0.9.1
                     , blaze-builder
                     , bytestring
                     , case-insensitive == 1.2.0.7
                     , hashable >= 1.2.4.0 && <= 1.2.5.0
  hs-source-dirs:      src      
  default-language:    Haskell2010
  --java-sources:        java/servlet-api-2.5.jar,java/Utils.java
  java-sources:        java/Utils.java
  maven-depends:       javax.servlet:servlet-api:2.5
  
executable wai-servlet-test
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , wai-servlet
                     , wai == 3.2.1.1
                     , http-types == 0.9.1
                     , blaze-builder
  hs-source-dirs:      app
  default-language:    Haskell2010
