name:                wai-servlet
version:             0.1.5.0
description:         Integration of eta wai applications with the servlet api
license:             BSD3
license-file:        LICENSE
author:              Javier Neira Sanchez
maintainer:          Javier Neira Sanchez <atreyu.bbb@gmail.com>
homepage:            https://github.com/jneira/wai-servlet
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           Experimental
                     
source-repository this
  type:              git
  location:          https://github.com/jneira/wai-servlet
  tag:               0.1.5.0

Flag wai-servlet-debug
    Description: print debug output. not suitable for production
    Default:     False

library
  exposed-modules:     Network.Wai.Servlet
                     , Network.Wai.Servlet.Examples
  other-modules:       Network.Wai.Servlet.Request
                     , Network.Wai.Servlet.Response
                     , Network.Wai.Servlet.File
                     , Network.Wai.Servlet.Settings
                     , Javax.Servlet
  -- other-extensions:
  build-depends:       base >= 4.8 && < 4.9
                     , wai
                     , network
                     , http-types
                     , http-date
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , hashable
                     , utf8-string
  if impl(eta >= 0.0.9.7)
     build-depends:    eta-java-interop
     cpp-options:      -DINTEROP
  if impl(eta <= 0.7.1)
     cpp-options:      -DPURE_JAVA_WITH
  hs-source-dirs:      src
  default-language:    Haskell2010
  maven-depends:       javax.servlet:servlet-api:2.5
  if impl(eta >= 0.0.9)
    java-sources:      java/Utils.java
  else
    java-sources:      java/eta-0.0.6/Utils.java
  if flag(wai-servlet-debug)
    cpp-options:       -DWAI_SERVLET_DEBUG

